final 5.0