@@ -1,4 +1,21 @@
 # TRY-Converter ₺
 Convert TRY to USD, EUR, GBP, JPY with just one click.
 
+## Requirements
+JavaFX SDK
+python3-bs4
+python3-requests
+
+## How to Run ? 
+git clone https://github.com/cetin172004/TRY-Converter.git
+cd TRY-Converter
+touch run.sh
+nano run.sh
+
+(copy&paste it)
+javac --module-path your_sdk/lib --add-modules javafx.controls Main.java
+java --module-path your_sdk/lib --add-modules javafx.controls Main
+
+bash run.sh
+
 ![banner](https://github.com/user-attachments/assets/295da8f7-d5a9-4631-bf85-00ce762921e8)
